--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/" />
 </head>
-<body>
+
+  <body style="background-color: #b8beb5">
+
+
+
   <app-root></app-root>
 </body>
 </html>
